# auto_input

./: .firebaserc  .gitignore  README.md  demo-customer.html  firebase.json  index.html  package-lock.json  package.json
electron/: main.js
extension/: content.js  manifest.json  popup.css  popup.html  popup.js
functions/: .env.example  index.js  package-lock.json  package.json
site/: demo-customer.html  desktop-login.html  extension-install.html  index.html  payment-fail.html  payment-success.html  privacy.html  styles.css  terms.html
src/: app.js  firebase-config.js  payment-config.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tools/: prepare-tauri-dist.js  serve.js
