[package]
name = "auto-input"
version = "0.1.0"
description = "Auto Input desktop app"
authors = ["Luvxy"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-tungstenite = "0.24"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
